v2/docs/SecurityOption.md
# IO.Swagger.Model.SecurityOption
## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**KbaProtection** | **string** | Signers need to pass Knowledge Based Authentication before they gain access to view and sign the document. | [optional] 
**PasswordProtection** | **string** | Specifies if signers are required to enter a password to have access to sign the document. | [optional] 
**WebIdentityProtection** | **string** | Specifies if signers are required to provide their web identity, before they gain access to view and sign the document. | [optional] 
**ExternalPassword** | **string** | The secondary password that will be used to protect signing the document for external signers. Note that Adobe Sign will never show this password to anyone, so you will need to separately communicate it to any relevant parties. This password is applied only if password protection is specified for external signers or all signers | [optional] 
**InternalPassword** | **string** | The secondary password that will be used to protect signing the document for internal signers. Note that Adobe Sign will never show this password to anyone, so you will need to separately communicate it to any relevant parties. This password is applied only if password protection is specified for internal signers or all signers | [optional] 
**ProtectOpen** | **bool?** | If set to true, the document is always be encrypted with this password every time it is sent by email. Recipients need to provide the password to be able to view the PDF files | [optional] 
**OpenPassword** | **string** | The secondary password that will be used to secure the PDF document. Note that Adobe Sign will never show this password to anyone, so you will need to separately communicate it to any relevant parties. This password is used only if protectOpen field is set to true | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

